--- a/configs/mt_magrpo_che_config.yaml
+++ b/configs/mt_magrpo_che_config.yaml
@@ -26,8 +26,9 @@ output:
   base_dir: "../../../projects/bepg/sliu30/output_mt"
   save_final_model: true
 
-# Multi-turn MAGRPO training configuration
-mt_magrpo:
+# MAGRPO training configuration (multi-turn enabled via num_turns)
+magrpo:
+  num_turns: 2
   num_train_epochs: 10  # Reduced from 20 for multi-turn
   per_device_train_batch_size: 1
   learning_rate: 1.0e-5
@@ -40,7 +41,6 @@ mt_magrpo:
   beta: 0.02
   # Multi-turn specific parameters
   turn_gradient_weights: [1.2, 0.8]  # Weights for different turns
-  num_turns: 2
   expert_model: "claude-3-5-sonnet-20241022"  # Expert model for feedback (Claude Sonnet for better performance)
   early_termination_weight: 2.0
 
