--- a/configs/mt_magrpo_he_config.yaml
+++ b/configs/mt_magrpo_he_config.yaml
@@ -26,8 +26,9 @@ output:
   base_dir: "../../../projects/bepg/sliu30/output_mt"
   save_final_model: true
 
-# Multi-turn MAGRPO training configuration
-mt_magrpo:
+# MAGRPO training configuration (multi-turn enabled via num_turns)
+magrpo:
+  num_turns: 2  # Set > 1 for multi-turn training
   num_train_epochs: 7
   per_device_train_batch_size: 1
   learning_rate: 1.0e-5
