--- a/configs/mt_magrpo_he_config.yaml
+++ b/configs/mt_magrpo_he_config.yaml
@@ -40,7 +40,7 @@ magrpo:
   # Multi-turn specific parameters
   turn_gradient_weights: [1.2, 0.8]  # Weights for different turns
   num_turns: 2
-  expert_model: "claude-3-5-sonnet-20241022"  # Expert model for feedback (Claude Sonnet for better performance)
+  expert_model: "deepseek-coder"  # Expert model for feedback
   early_termination_weight: 2.0  # Weight for early termination reward
   # Temperature and top_p will be set based on model_config if not specified
   # temperature: 0.8  # Optional override
