--- a/configs/mt_grpo_he_config.yaml
+++ b/configs/mt_grpo_he_config.yaml
@@ -46,6 +46,7 @@ grpo:
   turn_gradient_weights: [1.2, 0.8]
   early_termination_weight: 2.0
   early_termination_threshold: 2.1
+  reward_shift: null
 
 # wandb
 wandb:
