--- a/configs/grpo_che_config.yaml
+++ b/configs/grpo_che_config.yaml
@@ -9,7 +9,7 @@ model:
     trust_remote_code: true
   model_kwargs:
     trust_remote_code: true
-    torch_dtype: "auto"
+    torch_dtype: "bfloat16"
 
 # dataset
 dataset:
@@ -20,8 +20,9 @@ dataset:
 
 # output
 output:
-  base_dir: "../../../work/hdd/bepg/sliu30/output_st_grpo"
+  base_dir: "output"
   save_final_model: false
+  verbose: false
 
 # external
 external:
@@ -32,17 +33,19 @@ external:
 
 # grpo
 grpo:
-  num_train_epochs: 16
+  num_turns: 2
+  num_train_epochs: 8
   per_device_train_batch_size: 1
-  learning_rate: 1.0e-5
+  learning_rate: 2.0e-5
   logging_steps: 50
   save_steps: 200
   num_generations: 4
   max_new_tokens: 256
-  joint_mode: cross
+  joint_mode: aligned
   temperature: 0.8
   top_p: 0.95
   discount: 0.9
+  termination_threshold: -0.1
   reward_shift: -2.1
 
 # wandb
@@ -50,5 +53,5 @@ wandb:
   project: "mlrl"
   entity: "nu-llpr"
   name: "grpo_coophumaneval"
-  dir: "../../../work/hdd/bepg/sliu30/output_st_grpo"
-  tags: ["grpo", "coophumaneval", "single-agent"]
+  dir: "output"
+  tags: ["grpo", "coophumaneval"]
