--- a/configs/magrpo_che_config.yaml
+++ b/configs/magrpo_che_config.yaml
@@ -9,7 +9,7 @@ model:
     trust_remote_code: true
   model_kwargs:
     trust_remote_code: true
-    torch_dtype: "auto"
+    torch_dtype: "bfloat16"
 
 # dataset
 dataset:
@@ -20,8 +20,9 @@ dataset:
 
 # output
 output:
-  base_dir: "../../../work/hdd/bepg/sliu30/output_st_magrpo"
+  base_dir: "output"
   save_final_model: false
+  verbose: false
 
 # external
 external:
@@ -32,7 +33,8 @@ external:
 
 # magrpo
 magrpo:
-  num_train_epochs: 16
+  num_turns: 2
+  num_train_epochs: 8
   per_device_train_batch_size: 1
   learning_rate: 2.0e-5
   logging_steps: 50
@@ -41,9 +43,10 @@ magrpo:
   max_new_tokens: 256
   temperature: 0.8
   top_p: 0.95
-  joint_mode: cross
+  joint_mode: aligned
   num_agents: 2
   discount: 0.9
+  termination_threshold: -0.2
   reward_shift: -4
 
 # wandb
@@ -51,5 +54,5 @@ wandb:
   project: "mlrl"
   entity: "nu-llpr"
   name: "magrpo_coophumaneval"
-  dir: "../../../work/hdd/bepg/sliu30/output_st_magrpo"
+  dir: "output"
   tags: ["magrpo", "coophumaneval", "multi-agent"]
