Feature: add variance compare (#25)
* add compare

* update compare

* use default

* Update code_gen_compare_iac.py

* update

* update epochs

* chore: update default wandb param

* chore: change ymal

* update lr

* update

--- a/configs/magrpo_he_config.yaml
+++ b/configs/magrpo_he_config.yaml
@@ -49,7 +49,7 @@ magrpo:
 
 # wandb
 wandb:
-  project: "mlrl"
+  project: "comlrl"
   entity: "OpenMLRL"
   name: "magrpo_humaneval"
   dir: "output"
