--- a/configs/magrpo_che_config.yaml
+++ b/configs/magrpo_che_config.yaml
@@ -51,7 +51,7 @@ magrpo:
 
 # wandb
 wandb:
-  project: "mlrl"
+  project: "comlrl"
   entity: "OpenMLRL"
   name: "magrpo_coophumaneval"
   dir: "output"
