Add Replay Buffer for MAGRPO, MAAC, IAC, and use env_step to record (#27)
* add rollout buffer for magrpo but still on policy to align maac

* update eval interval

* udpate dataset name

* Update grpo_che_config.yaml

* u

* Align MAAC/MAGRPO config buffers

* allow verbose output

* vram

* add verbose

* update batch size

* update default config

* fix magrpo

* try to align magrpo with maac by having top-k null and same prompt

* Update magrpo_che_config.yaml

* update

* Update magrpo_che_config.yaml

* rm anthropic dependency

* Update magrpo_che_config.yaml

* update num_epochs

* ud param

* ud param

* Update magrpo_che_config.yaml

* Update maac_che_config.yaml

* Update magrpo_che_config.yaml

* u

* u

* better matched learning rate

* add iac and change clr of maac back

* get iac set up

* add iac eval

* allow multiturn iac

* BEtter align

* add single-agent-baselines and other datasets

--- a/configs/ac_che_config.yaml
+++ b/configs/ac_che_config.yaml
@@ -30,10 +30,9 @@ external:
   mode: "level_feedback"
   sandbox_slice: 1
 
-# maac
-maac:
+# ac
+ac:
   num_turns: 2
-  critic_type: "v"
   num_train_epochs: 80
   per_device_train_batch_size: 1
   actor_learning_rate: 5.0e-6
@@ -44,7 +43,7 @@ maac:
   temperature: 0.6
   top_p: 0.6
   top_k: null
-  num_agents: 2
+  num_agents: 1
   critic_model: null
   reward_shift: -4
   discount: 0.9
@@ -56,6 +55,6 @@ maac:
 wandb:
   project: "comlrl"
   entity: "OpenMLRL"
-  name: "maac_coophumaneval"
+  name: "ac_coophumaneval"
   dir: "output"
-  tags: ["maac", "coophumaneval", "multi-agent", "turns_2"]
+  tags: ["ac", "coophumaneval", "single-agent", "turns_2"]
