--- a/configs/maac_mbpp_config.yaml
+++ b/configs/maac_mbpp_config.yaml
@@ -13,10 +13,10 @@ model:
 
 # dataset
 dataset:
-  name: "OpenMLRL/CoopHumanEval"
-  type: "coophumaneval"
-  train_split: "test[16:]"
-  eval_split: "test[:16]"
+  name: "OpenMLRL/MBPP"
+  type: "mbpp"
+  train_split: "test[15:65]"
+  eval_split: "test[:15]"
 
 # output
 output:
@@ -56,6 +56,6 @@ maac:
 wandb:
   project: "comlrl"
   entity: "OpenMLRL"
-  name: "maac_coophumaneval"
+  name: "maac_mbpp"
   dir: "output"
-  tags: ["maac", "coophumaneval", "multi-agent", "turns_2"]
+  tags: ["maac", "mbpp", "multi-agent", "turns_2"]
