--- a/configs/ac_he_config.yaml
+++ b/configs/ac_he_config.yaml
@@ -13,10 +13,10 @@ model:
 
 # dataset
 dataset:
-  name: "OpenMLRL/CoopHumanEval"
-  type: "coophumaneval"
-  train_split: "test[16:]"
-  eval_split: "test[:16]"
+  name: "openai/openai_humaneval"
+  type: "humaneval"
+  train_split: "test[33:163]"
+  eval_split: "test[:32]"
 
 # output
 output:
@@ -30,10 +30,9 @@ external:
   mode: "level_feedback"
   sandbox_slice: 1
 
-# maac
-maac:
+# ac
+ac:
   num_turns: 2
-  critic_type: "v"
   num_train_epochs: 80
   per_device_train_batch_size: 1
   actor_learning_rate: 5.0e-6
@@ -44,7 +43,7 @@ maac:
   temperature: 0.6
   top_p: 0.6
   top_k: null
-  num_agents: 2
+  num_agents: 1
   critic_model: null
   reward_shift: -4
   discount: 0.9
@@ -56,6 +55,6 @@ maac:
 wandb:
   project: "comlrl"
   entity: "OpenMLRL"
-  name: "maac_coophumaneval"
+  name: "ac_humaneval"
   dir: "output"
-  tags: ["maac", "coophumaneval", "multi-agent", "turns_2"]
+  tags: ["ac", "humaneval", "single-agent", "turns_2"]
