--- a/configs/iac_che_config.yaml
+++ b/configs/iac_che_config.yaml
@@ -30,10 +30,9 @@ external:
   mode: "level_feedback"
   sandbox_slice: 1
 
-# maac
-maac:
+# iac
+iac:
   num_turns: 2
-  critic_type: "v"
   num_train_epochs: 80
   per_device_train_batch_size: 1
   actor_learning_rate: 5.0e-6
@@ -56,6 +55,6 @@ maac:
 wandb:
   project: "comlrl"
   entity: "OpenMLRL"
-  name: "maac_coophumaneval"
+  name: "iac_coophumaneval"
   dir: "output"
-  tags: ["maac", "coophumaneval", "multi-agent", "turns_2"]
+  tags: ["iac", "coophumaneval", "multi-agent", "turns_2"]
