--- a/configs/iac_he_config.yaml
+++ b/configs/iac_he_config.yaml
@@ -13,10 +13,10 @@ model:
 
 # dataset
 dataset:
-  name: "OpenMLRL/CoopHumanEval"
-  type: "coophumaneval"
-  train_split: "test[16:]"
-  eval_split: "test[:16]"
+  name: "openai/openai_humaneval"
+  type: "humaneval"
+  train_split: "test[33:163]"
+  eval_split: "test[:32]"
 
 # output
 output:
@@ -30,10 +30,9 @@ external:
   mode: "level_feedback"
   sandbox_slice: 1
 
-# maac
-maac:
+# iac
+iac:
   num_turns: 2
-  critic_type: "v"
   num_train_epochs: 80
   per_device_train_batch_size: 1
   actor_learning_rate: 5.0e-6
@@ -56,6 +55,6 @@ maac:
 wandb:
   project: "comlrl"
   entity: "OpenMLRL"
-  name: "maac_coophumaneval"
+  name: "iac_humaneval"
   dir: "output"
-  tags: ["maac", "coophumaneval", "multi-agent", "turns_2"]
+  tags: ["iac", "humaneval", "multi-agent", "turns_2"]
