--- a/configs/magrpo_he_config.yaml
+++ b/configs/magrpo_he_config.yaml
@@ -10,6 +10,7 @@ model:
   model_kwargs:
     trust_remote_code: true
     torch_dtype: "bfloat16"
+  special_tokens: {}
 
 # dataset
 dataset:
@@ -17,6 +18,8 @@ dataset:
   type: "humaneval"
   train_split: "test[33:163]"
   eval_split: "test[:32]"
+
+seed: 42
 
 # output
 output:
@@ -32,22 +35,29 @@ external:
 # magrpo
 magrpo:
   num_turns: 2
-  external_prompt_passthrough: true
   num_train_epochs: 6
   per_device_train_batch_size: 1
+  rollout_buffer_size: 2
   learning_rate: 2.0e-5
   eval_interval: 4
   eval_num_samples: 4
   num_generations: 4
   max_new_tokens: 256
+  temperature: 0.6
+  top_p: 0.6
   top_k: null
   joint_mode: aligned
   num_agents: 2
   discount: 0.9
   termination_threshold: -0.2
-  reward_shift: -4
 
   logging_steps: 50
+  save_steps: 200
+
+reward_processor:
+  enabled: true
+  scale_factor: 1.0
+  shift: -4
 # wandb
 wandb:
   project: "comlrl"
