--- a/configs/magrpo_mbpp_config.yaml
+++ b/configs/magrpo_mbpp_config.yaml
@@ -10,6 +10,7 @@ model:
   model_kwargs:
     trust_remote_code: true
     torch_dtype: "bfloat16"
+  special_tokens: {}
 
 # dataset
 dataset:
@@ -17,6 +18,8 @@ dataset:
   type: "mbpp"
   train_split: "test[15:65]"
   eval_split: "test[:15]"
+
+seed: 42
 
 # output
 output:
@@ -32,9 +35,9 @@ external:
 # magrpo
 magrpo:
   num_turns: 2
-  external_prompt_passthrough: true
   num_train_epochs: 8
   per_device_train_batch_size: 1
+  rollout_buffer_size: 2
   learning_rate: 3.0e-5
   eval_interval: 4
   eval_num_samples: 4
@@ -47,9 +50,14 @@ magrpo:
   num_agents: 2
   discount: 0.9
   termination_threshold: -0.2
-  reward_shift: -4
 
   logging_steps: 50
+  save_steps: 200
+
+reward_processor:
+  enabled: true
+  scale_factor: 1.0
+  shift: -4
 # wandb
 wandb:
   project: "comlrl"
