--- a/configs/magrpo_he_config.yaml
+++ b/configs/magrpo_he_config.yaml
@@ -1,6 +1,6 @@
 # model
 model:
-  name: "Qwen/Qwen2.5-Coder-3B"
+  name: "Qwen/Qwen2.5-Coder-1.5B"
   type: "qwen"
   temperature: 0.7
   top_p: 0.9
@@ -23,9 +23,12 @@ seed: 42
 
 # output
 output:
-  base_dir: "output"
+  base_dir: "/workspace/output"
   save_final_model: false
   verbose: false
+  log_completions: true  # Enable completion logging to JSON files
+  log_max_samples_per_file: 10  # Max samples per log file before rotation
+
 
 # external
 external:
@@ -34,10 +37,10 @@ external:
 
 # magrpo
 magrpo:
-  num_turns: 2
-  num_train_epochs: 6
+  num_turns: 1
+  num_train_epochs: 4
   per_device_train_batch_size: 1
-  rollout_buffer_size: 2
+  rollout_buffer_size: 64
   learning_rate: 2.0e-5
   eval_interval: 4
   eval_num_samples: 4
@@ -60,8 +63,8 @@ reward_processor:
   shift: -4
 # wandb
 wandb:
-  project: "comlrl"
-  entity: "OpenMLRL"
-  name: "magrpo_humaneval"
+  project: "MA-GRPO-Code"
+  entity: "namhokoh-korea-advanced-institute-of-science-and-technology"
+  name: "magrpo_he_shared_qwen2.5-1.5B"
   dir: "output"
-  tags: ["magrpo", "humaneval", "multi-agent"]
+  tags: ["magrpo", "humaneval", "multi-agent", "turn_1"]
