--- a/configs/magrpo_he_config.yaml
+++ b/configs/magrpo_he_config.yaml
@@ -57,7 +57,7 @@ magrpo:
   # Theory of Mind (ToM) settings
   # When enabled, Agent 2 first predicts Agent 1's auxiliary function,
   # then uses this prediction to inform its main function implementation
-  enable_tom: false  # Set to true to enable ToM
+  enable_tom: true  # Set to true to enable ToM
   tom_max_new_tokens: 256  # Max tokens for ToM inference
 
   logging_steps: 5
