--- a/configs/magrpo_he_config.yaml
+++ b/configs/magrpo_he_config.yaml
@@ -1,20 +1,33 @@
-# model
-model:
-  name: "Qwen/Qwen2.5-Coder-3B"
-  type: "qwen"
-  temperature: 0.7
-  top_p: 0.9
-  max_length: 2048
-  tokenizer_kwargs:
-    trust_remote_code: true
-  model_kwargs:
-    trust_remote_code: true
-    torch_dtype: "bfloat16"
-  special_tokens: {}
+# models (heterogeneous agents - each agent uses a different model)
+models:
+  # Agent 0: Auxiliary function generator
+  - name: "Qwen/Qwen2.5-Coder-3B"
+    type: "qwen"
+    temperature: 0.7
+    top_p: 0.9
+    max_length: 2048
+    tokenizer_kwargs:
+      trust_remote_code: true
+    model_kwargs:
+      trust_remote_code: true
+      torch_dtype: "bfloat16"
+    special_tokens: {}
+  # Agent 1: Main function generator
+  - name: "bigcode/starcoder2-3b"
+    type: "gpt"
+    temperature: 0.7
+    top_p: 0.9
+    max_length: 2048
+    tokenizer_kwargs:
+      trust_remote_code: true
+    model_kwargs:
+      trust_remote_code: true
+      torch_dtype: "bfloat16"
+    special_tokens: {}
 
 # dataset
 dataset:
-  name: "openai/openai_humaneval"
+  name: "/home/work/aipr-jhna/huggingface_hub/openai_humaneval" #"openai/openai_humaneval"
   type: "humaneval"
   train_split: "test[33:163]"
   eval_split: "test[:32]"
@@ -23,7 +36,7 @@ seed: 42
 
 # output
 output:
-  base_dir: "output"
+  base_dir: "/home/work/aipr-jhna/output/comlrl_output/qwen_star/"
   save_final_model: false
   verbose: false
 
