--- a/configs/magrpo_he_config2.yaml
+++ b/configs/magrpo_he_config2.yaml
@@ -61,7 +61,7 @@ magrpo:
   num_turns: 1
   num_train_epochs: 4
   per_device_train_batch_size: 1
-  rollout_buffer_size: 512
+  rollout_buffer_size: 256
   learning_rate: 2.0e-5
   eval_interval: 4
   eval_num_samples: 4
@@ -70,7 +70,7 @@ magrpo:
   temperature: 0.6
   top_p: 0.6
   top_k: null
-  joint_mode: aligned
+  joint_mode: cross
   num_agents: 2
   discount: 0.9
   termination_threshold: -0.2
