--- a/configs/magrpo_he_config.yaml
+++ b/configs/magrpo_he_config.yaml
@@ -1,6 +1,6 @@
 # model
 model:
-  name: "Qwen/Qwen2.5-Coder-1.5B"
+  name: "/home/work/aipr-jhna/huggingface_hub/Qwen2.5-Coder-1.5B"
   type: "qwen"
   temperature: 0.7
   top_p: 0.9
@@ -14,7 +14,7 @@ model:
 
 # dataset
 dataset:
-  name: "openai/openai_humaneval"
+  name: "/home/work/aipr-jhna/huggingface_hub/openai_humaneval"
   type: "humaneval"
   train_split: "test[33:163]"
   eval_split: "test[:32]"
@@ -23,7 +23,7 @@ seed: 42
 
 # output
 output:
-  base_dir: "/workspace/output"
+  base_dir: "/workspace/output/magrpo_he"
   save_final_model: false
   verbose: false
   log_completions: true  # Enable completion logging to JSON files
@@ -40,7 +40,7 @@ magrpo:
   num_turns: 1
   num_train_epochs: 4
   per_device_train_batch_size: 1
-  rollout_buffer_size: 64
+  rollout_buffer_size: 128
   learning_rate: 2.0e-5
   eval_interval: 4
   eval_num_samples: 4
@@ -60,11 +60,11 @@ magrpo:
 reward_processor:
   enabled: true
   scale_factor: 1.0
-  shift: -4
+  shift: -8
 # wandb
 wandb:
-  project: "MA-GRPO-Code"
-  entity: "namhokoh-korea-advanced-institute-of-science-and-technology"
-  name: "magrpo_he_shared_qwen2.5-1.5B"
+  project: "MAGRPO-Code-different"
+  entity: "contrl"
+  name: "magrpo_he_shared_qwen2.5-1.5B_shift-8_scaling-1.0_rollout-128"
   dir: "output"
   tags: ["magrpo", "humaneval", "multi-agent", "turn_1"]
