--- a/configs/pubmdp_grpo_he_config.yaml
+++ b/configs/pubmdp_grpo_he_config.yaml
@@ -37,6 +37,7 @@ prescription_magrpo:
   num_train_epochs: 4
   per_device_train_batch_size: 1
   learning_rate: 2.0e-5
+  rollout_buffer_size: 4
   logging_steps: 5
   save_steps: 200
   eval_interval: 4
