--- a/configs/hagrpo_he_config.yaml
+++ b/configs/hagrpo_he_config.yaml
@@ -1,6 +1,6 @@
 # model
 model:
-  name: "/home/work/aipr-jhna/huggingface_hub/Qwen2.5-Coder-3B"
+  name: "/home/work/aipr-jhna/huggingface_hub/Qwen2.5-Coder-1.5B"
   type: "qwen"
   temperature: 0.7
   top_p: 0.9
@@ -33,11 +33,11 @@ external:
   sandbox_slice: 1
 
 # magrpo
-magrpo:
+hagrpo:
   num_turns: 1
   num_train_epochs: 4
   per_device_train_batch_size: 1
-  rollout_buffer_size: 4
+  rollout_buffer_size: 16
   learning_rate: 2.0e-5
   eval_interval: 4
   eval_num_samples: 32
@@ -50,6 +50,13 @@ magrpo:
   num_agents: 2
   discount: 0.9
   termination_threshold: -0.2
+  
+  ppo_clip_eps: 0.1
+  m_clip_min: 0.1
+  m_clip_max: 2.0
+  shuffle_agent_order: false
+  reverse_agent_order: false  # true: Main -> Helper, false: Helper -> Main
+  use_ppo_clip: false  # false: use simple policy gradient (MAGRPO-style), M factor still applied
 
   logging_steps: 5
   save_steps: 200
@@ -62,6 +69,6 @@ reward_processor:
 wandb:
   project: "HumanEval"
   entity: "contrl"
-  name: "magrpo_humaneval_qwen2.5-coder-3b-shift-2"
+  name: "hagrpo_he_qwen2.5-coder-1.5b-shift-2-eps-0.0"
   dir: "output"
   tags: ["magrpo", "humaneval", "multi-agent"]
