--- a/configs/hagrpo_he_config.yaml
+++ b/configs/hagrpo_he_config.yaml
@@ -14,7 +14,7 @@ model:
 
 # LoRA PEFT configuration
 lora:
-  enabled: true
+  enabled: false
   r: 32  # rank of the update matrices
   lora_alpha: 32  # scaling factor
   lora_dropout: 0.0
@@ -47,7 +47,7 @@ hagrpo:
   num_turns: 1
   num_train_epochs: 4
   per_device_train_batch_size: 1
-  rollout_buffer_size: 16
+  rollout_buffer_size: 4
   learning_rate: 2.0e-5
   eval_interval: 4
   eval_num_samples: 32
@@ -59,11 +59,10 @@ hagrpo:
   joint_mode: aligned
   num_agents: 2
   discount: 0.9
-  termination_threshold: -0.2
   
   ppo_clip_eps: 0.1
   m_clip_min: 0.1
-  m_clip_max: 0.5
+  m_clip_max: 1.0
   shuffle_agent_order: false
   reverse_agent_order: false  # true: Main -> Helper, false: Helper -> Main
   use_ppo_clip: false  # false: use simple policy gradient (MAGRPO-style), M factor still applied
@@ -74,11 +73,17 @@ hagrpo:
 reward_processor:
   enabled: true
   scale_factor: 1.0
-  shift: -6
+  shift: -2
+
+# Collaboration enforcement settings
+# Prevents main function from defining its own aux function
+collaboration:
+  enforce: true  # If true, penalize main defining its own aux function
+  self_aux_penalty: 0.0  # Reward value when main defines its own aux (strong penalty)
 # wandb
 wandb:
   project: "HumanEval"
   entity: "contrl"
-  name: "hagrpo_he_qwen2.5-coder-1.5b-shift-6-eps-0.0-mclip0.5"
+  name: "hagrpo_he_qwen2.5-coder-1.5b-shift-2-eps0.0-mclip1.0-coop_penalty0.0-must_call_aux-full"
   dir: "output"
   tags: ["magrpo", "humaneval", "multi-agent"]
