--- a/configs/magrpo_bcb_config.yaml
+++ b/configs/magrpo_bcb_config.yaml
@@ -21,13 +21,13 @@ model:
 dataset:
   name: "/home/work/aipr-jhna/LLM_Collab_Code_Generation/data/bcb.jsonl"
   type: "bigcodebench"
-  train_split: "0:256"
-  eval_split: "256:280"
+  train_split: "0:180"
+  eval_split: "180:212"
   shuffle_train: true
   shuffle_eval: false
 
 # LoRA configuration
-use_lora: true
+use_lora: false
 lora_r: 32
 lora_alpha: 32
 lora_dropout: 0.0
@@ -51,19 +51,19 @@ external:
 
 # magrpo
 magrpo:
-  num_train_epochs: 4
+  num_train_epochs: 6
   per_device_train_batch_size: 1
-  rollout_buffer_size: 32
+  rollout_buffer_size: 4
   learning_rate: 2.0e-5
   eval_interval: 4
   eval_num_samples: 16
   num_generations: 4
-  max_new_tokens: 1024
-  temperature: 0.9
-  top_p: 0.95
+  max_new_tokens: 512
+  temperature: 0.7
+  top_p: 0.9
   top_k: null
-  repetition_penalty: 1.1  # Penalize repetitive generation
-  joint_mode: cross
+  repetition_penalty: None  # Penalize repetitive generation
+  joint_mode: aligned
   num_agents: 2
   logging_steps: 5
   save_steps: 250
@@ -74,17 +74,17 @@ magrpo:
   # Force main agent to use aux function (instead of optional)
   force_aux_usage: false
   # Multi-GPU distributed training (required for torchrun)
-  use_distributed: true
+  use_distributed: false
 
 reward_processor:
   enabled: true
   scale_factor: 1.0
-  shift: 0
+  shift: -2
 
 # wandb
 wandb:
   project: "BigCodeBench"
   entity: "contrl"
-  name: "magrpo_qwen2.5-1.5B_shift-0"
+  name: "magrpo_bcb_qwen2.5-3b_shift-2_full"
   dir: "output"
   tags: ["magrpo", "bigcodebench", "multi-agent"]
